# lzsa-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: build.yml
csrc/: lzsa_wrapper.c  lzsa_wrapper.h
examples/: all_modes.rs  simple.rs
src/: lib.rs
