[package]
name = "lzsa-sys"
version = "1.0.0"
edition = "2024"
license = "Zlib"
description = "Rust bindings for LZSA compression"
repository = "https://github.com/tommyo123/lzsa-sys"
links = "lzsa"

[lib]
name = "lzsa_sys"

[dependencies]


[build-dependencies]
cmake = "0.1"
bindgen = "0.69"
cc = "1.2.41"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[features]
default = ["static"]
static = []