[package]
name = "lzsa-sys"
version = "1.0.0"
edition = "2024"
license = "Zlib"
description = "Rust bindings for LZSA compression"
repository = "https://github.com/tommyo123/lzsa-sys"
links = "lzsa"

[lib]
name = "lzsa_sys"

[dependencies]


[build-dependencies]
cmake = "0.1"
bindgen = "0.69"
cc = "1.2.41"

# Production optimization profile
[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization (Rust side - this is OK!)
codegen-units = 1       # Better optimization (slower compile, faster runtime)
strip = true            # Remove debug symbols
panic = 'abort'         # Smaller binary size

# Development profile (faster compile times)
[profile.dev]
opt-level = 0           # No optimization for faster compile times

[features]
default = ["static"]
static = []